# dynamic_tables

./: .env.example  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  conftest.py  pytest.ini
backend/backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/tables/: models.py  serializers.py  urls.py  views.py
backend/tables/migrations/: 0001_initial.py  0002_alter_field_name.py
backend/tables/tests/: factories.py  test_models.py  test_serializers.py
